[package]
name = "toolcall-sre"
version = "0.1.0"
edition = "2024"
description = "An OpenAI-compatible reliability proxy for local-LLM tool calls: tolerant parsing, JSON-Schema validation, and auto-repair."
license = "Apache-2.0"
readme = "README.md"
keywords = ["llm", "tool-calling", "function-calling", "agent", "proxy"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
jsonschema = "0.47.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
